@@ -1,34 +1,54 @@
-// Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.gradle.service.execution;
 
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.PathManager;
+import com.intellij.openapi.application.ex.ApplicationInfoEx;
+import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskId;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskNotificationListener;
 import com.intellij.openapi.externalSystem.service.execution.ExternalSystemRunConfiguration;
+import com.intellij.openapi.externalSystem.util.OutputWrapper;
+import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.io.StreamUtil;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.*;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.MultiMap;
+import com.intellij.util.lang.JavaVersion;
+import org.gradle.initialization.BuildCancellationToken;
 import org.gradle.initialization.BuildLayoutParameters;
+import org.gradle.internal.classpath.ClassPath;
+import org.gradle.internal.classpath.DefaultClassPath;
+import org.gradle.internal.logging.progress.ProgressLoggerFactory;
 import org.gradle.internal.nativeintegration.services.NativeServices;
 import org.gradle.process.internal.JvmOptions;
 import org.gradle.tooling.*;
+import org.gradle.tooling.events.OperationType;
 import org.gradle.tooling.internal.consumer.DefaultGradleConnector;
+import org.gradle.tooling.internal.consumer.Distribution;
+import org.gradle.tooling.internal.protocol.InternalBuildProgressListener;
+import org.gradle.tooling.model.BuildIdentifier;
+import org.gradle.tooling.model.UnsupportedMethodException;
 import org.gradle.tooling.model.build.BuildEnvironment;
 import org.gradle.util.GradleVersion;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.plugins.gradle.GradleConnectorService;
 import org.jetbrains.plugins.gradle.service.project.DistributionFactoryExt;
 import org.jetbrains.plugins.gradle.service.project.ProjectResolverContext;
 import org.jetbrains.plugins.gradle.settings.DistributionType;
 import org.jetbrains.plugins.gradle.settings.GradleExecutionSettings;
 import org.jetbrains.plugins.gradle.tooling.internal.init.Init;
+import org.jetbrains.plugins.gradle.tooling.loader.rt.MarkerRt;
 import org.jetbrains.plugins.gradle.util.GradleConstants;
 import org.jetbrains.plugins.gradle.util.GradleEnvironment;
 import org.jetbrains.plugins.gradle.util.GradleUtil;
@@ -37,6 +57,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
@@ -97,7 +119,7 @@ public class GradleExecutionHelper {
                              @NotNull ProjectConnection connection,
                              @NotNull final OutputStream standardOutput,
                              @NotNull final OutputStream standardError) {
-    Set<String> jvmArgs = settings.getVmOptions();
+    List<String> jvmArgs = settings.getJvmArguments();
     BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener, null);
 
     String gradleVersion = buildEnvironment != null ? buildEnvironment.getGradle().getGradleVersion() : null;
@@ -107,7 +129,8 @@ public class GradleExecutionHelper {
       if (buildEnvironment != null) {
         // the BuildEnvironment jvm arguments of the main build should be used for the 'buildSrc' import
         // to avoid spawning of the second gradle daemon
-        List<String> buildJvmArguments = "buildSrc".equals(buildEnvironment.getBuildIdentifier().getRootDir().getName())
+        BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
+        List<String> buildJvmArguments = buildIdentifier == null || "buildSrc".equals(buildIdentifier.getRootDir().getName())
                                          ? ContainerUtil.emptyList()
                                          : buildEnvironment.getJava().getJvmArguments();
         merged = mergeJvmArgs(settings.getServiceDirectory(), buildJvmArguments, jvmArgs);
@@ -119,7 +142,7 @@ public class GradleExecutionHelper {
       // filter nulls and empty strings
       List<String> filteredArgs = ContainerUtil.mapNotNull(merged, s -> StringUtil.isEmpty(s) ? null : s);
 
-      operation.setJvmArguments(ArrayUtil.toStringArray(filteredArgs));
+      operation.setJvmArguments(ArrayUtilRt.toStringArray(filteredArgs));
     }
 
     if (settings.isOfflineWork()) {
@@ -128,23 +151,28 @@ public class GradleExecutionHelper {
 
     final Application application = ApplicationManager.getApplication();
     if (application != null && application.isUnitTestMode()) {
-      if (!settings.getArguments().contains("--quiet") && !settings.getArguments().contains("--debug")) {
-        settings.withArgument("--info");
+      if (!settings.getArguments().contains("--quiet")) {
+        if (!settings.getArguments().contains("--debug")){
+          settings.withArgument("--info");
+        }
       }
-      settings.withArgument("--recompile-scripts");
     }
 
+    List<String> filteredArgs = new ArrayList<>();
     if (!settings.getArguments().isEmpty()) {
       String loggableArgs = StringUtil.join(obfuscatePasswordParameters(settings.getArguments()), " ");
       LOG.info("Passing command-line args to Gradle Tooling API: " + loggableArgs);
 
       // filter nulls and empty strings
-      List<String> filteredArgs = ContainerUtil.mapNotNull(settings.getArguments(), s -> StringUtil.isEmpty(s) ? null : s);
+      filteredArgs.addAll(ContainerUtil.mapNotNull(settings.getArguments(), s -> StringUtil.isEmpty(s) ? null : s));
 
       // TODO remove this replacement when --tests option will become available for tooling API
       replaceTestCommandOptionWithInitScript(filteredArgs);
-      operation.withArguments(ArrayUtil.toStringArray(filteredArgs));
     }
+    filteredArgs.add("-Didea.active=true");
+    filteredArgs.add("-Didea.version=" + getIdeaVersion());
+    operation.withArguments(ArrayUtilRt.toStringArray(filteredArgs));
+
     setupEnvironment(operation, settings, gradleVersion, id, listener);
 
     final String javaHome = settings.getJavaHome();
@@ -152,16 +180,35 @@ public class GradleExecutionHelper {
       operation.setJavaHome(new File(javaHome));
     }
 
-    String buildRootDir = buildEnvironment == null ? null : buildEnvironment.getBuildIdentifier().getRootDir().getPath();
+    String buildRootDir;
+    if (buildEnvironment == null) {
+      buildRootDir = null;
+    }
+    else {
+      BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
+      buildRootDir = buildIdentifier == null ? null : buildIdentifier.getRootDir().getPath();
+    }
     GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, id, buildRootDir);
     operation.addProgressListener((ProgressListener)gradleProgressListener);
-    operation.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+    operation.addProgressListener(gradleProgressListener,
+                                  OperationType.TASK,
+                                  OperationType.TEST);
     operation.setStandardOutput(standardOutput);
     operation.setStandardError(standardError);
     InputStream inputStream = settings.getUserData(ExternalSystemRunConfiguration.RUN_INPUT_KEY);
     if (inputStream != null) {
       operation.setStandardInput(inputStream);
     }
+  }
+
+  @Nullable
+  private static BuildIdentifier getBuildIdentifier(@NotNull BuildEnvironment buildEnvironment) {
+    try {
+      return buildEnvironment.getBuildIdentifier();
+    }
+    catch (UnsupportedMethodException ignore) {
+    }
+    return null;
   }
 
   private static void setupEnvironment(@NotNull LongRunningOperation operation,
@@ -188,8 +235,16 @@ public class GradleExecutionHelper {
     operation.setEnvironmentVariables(effectiveEnvironment);
   }
 
-  public <T> T execute(@NotNull String projectPath, @Nullable GradleExecutionSettings settings, @NotNull Function<ProjectConnection, T> f) {
+  public <T> T execute(@NotNull String projectPath, @Nullable GradleExecutionSettings settings, @NotNull Function<? super ProjectConnection, ? extends T> f) {
+    return execute(projectPath, settings, null, null, null, f);
+  }
 
+  public <T> T execute(@NotNull String projectPath,
+                       @Nullable GradleExecutionSettings settings,
+                       @Nullable ExternalSystemTaskId taskId,
+                       @Nullable ExternalSystemTaskNotificationListener listener,
+                       @Nullable CancellationTokenSource cancellationTokenSource,
+                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
     final String projectDir;
     final File projectPathFile = new File(projectPath);
     if (projectPathFile.isFile() && projectPath.endsWith(GradleConstants.EXTENSION)
@@ -209,28 +264,32 @@ public class GradleExecutionHelper {
       catch (Exception ignore) {
       }
     }
-    ProjectConnection connection = getConnection(projectDir, settings);
+    GradleConnector connector = GradleConnectorService.getConnector(projectPath, taskId);
+    ProjectConnection connection = getConnection(connector, projectDir, settings);
     try {
+      workaroundJavaVersionIssueIfNeeded(connection, taskId, listener, cancellationTokenSource);
       return f.fun(connection);
     }
     catch (ExternalSystemException e) {
       throw e;
     }
     catch (Throwable e) {
-      LOG.debug("Gradle execution error", e);
+      LOG.warn("Gradle execution error", e);
       Throwable rootCause = ExceptionUtil.getRootCause(e);
-      throw new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+      ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+      externalSystemException.initCause(e);
+      throw externalSystemException;
     }
     finally {
+      if (userDir != null) {
+        // restore original user.dir property
+        System.setProperty("user.dir", userDir);
+      }
       try {
         connection.close();
-        if (userDir != null) {
-          // restore original user.dir property
-          System.setProperty("user.dir", userDir);
-        }
       }
       catch (Throwable e) {
-        LOG.debug("Gradle connection close error", e);
+        LOG.warn("Gradle connection close error", e);
       }
     }
   }
@@ -238,6 +297,15 @@ public class GradleExecutionHelper {
   public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
                                      @NotNull String projectPath,
                                      @NotNull GradleExecutionSettings settings,
+                                     @NotNull ExternalSystemTaskNotificationListener listener,
+                                     @NotNull CancellationToken cancellationToken) {
+    ensureInstalledWrapper(id, projectPath, settings, GradleVersion.current(), listener, cancellationToken);
+  }
+
+  public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
+                                     @NotNull String projectPath,
+                                     @NotNull GradleExecutionSettings settings,
+                                     @NotNull GradleVersion gradleVersion,
                                      @NotNull ExternalSystemTaskNotificationListener listener,
                                      @NotNull CancellationToken cancellationToken) {
 
@@ -249,7 +317,8 @@ public class GradleExecutionHelper {
     }
 
     final long ttlInMs = settings.getRemoteProcessIdleTtlInMs();
-    ProjectConnection connection = getConnection(projectPath, settings);
+    GradleConnector connector = GradleConnectorService.getConnector(projectPath, id);
+    ProjectConnection connection = getConnection(connector, projectPath, settings);
     try {
       settings.setRemoteProcessIdleTtlInMs(100);
       try {
@@ -259,7 +328,7 @@ public class GradleExecutionHelper {
         final File scriptFile = new File(wrapperFilesLocation, "gradlew");
         final File pathToProperties = new File(wrapperFilesLocation, "path.tmp");
 
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtil.delete(wrapperFilesLocation)));
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtil.delete(wrapperFilesLocation), "GradleExecutionHelper cleanup"));
         final String[] lines = {
           "",
           "gradle.projectsEvaluated { gr ->",
@@ -269,6 +338,7 @@ public class GradleExecutionHelper {
           "      wrapper.jarFile = new File('" + StringUtil.escapeBackSlashes(jarFile.getCanonicalPath()) + "')",
           "      wrapper.scriptFile = new File('" + StringUtil.escapeBackSlashes(scriptFile.getCanonicalPath()) + "')",
           "    }",
+          "    wrapper.gradleVersion = '" + gradleVersion.getVersion() + "'",
           "    wrapper.doLast {",
           "      new File('" + StringUtil.escapeBackSlashes(pathToProperties.getCanonicalPath()) + "').write wrapper.propertiesFile.getCanonicalPath()",
           "    }",
@@ -276,7 +346,7 @@ public class GradleExecutionHelper {
           "}",
           "",
         };
-        final File tempFile = writeToFileGradleInitScript(StringUtil.join(lines, SystemProperties.getLineSeparator()));
+        final File tempFile = writeToFileGradleInitScript(StringUtil.join(lines, SystemProperties.getLineSeparator()), "wrapper_init");
         settings.withArguments(GradleConstants.INIT_SCRIPT_CMD_OPTION, tempFile.getAbsolutePath());
         BuildLauncher launcher = getBuildLauncher(id, connection, settings, listener);
         launcher.withCancellationToken(cancellationToken);
@@ -291,7 +361,9 @@ public class GradleExecutionHelper {
     catch (Throwable e) {
       LOG.warn("Can't update wrapper", e);
       Throwable rootCause = ExceptionUtil.getRootCause(e);
-      throw new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
+      ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
+      externalSystemException.initCause(e);
+      throw externalSystemException;
     }
     finally {
       settings.setRemoteProcessIdleTtlInMs(ttlInMs);
@@ -304,44 +376,97 @@ public class GradleExecutionHelper {
     }
   }
 
-  private static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, Set<String> jvmArgsFromIdeSettings) {
+  @ApiStatus.Experimental
+  static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
     File gradleUserHomeDir = serviceDirectory != null ? new File(serviceDirectory) : new BuildLayoutParameters().getGradleUserHomeDir();
     LOG.debug("Gradle home: " + gradleUserHomeDir);
     NativeServices.initialize(gradleUserHomeDir);
-    Map<String, String> mergedArgs = new LinkedHashMap<>();
+    JvmOptions jvmOptions = new JvmOptions(null);
+    List<String> mergedJvmArgs = mergeJvmArgs(jvmArgs, jvmArgsFromIdeSettings);
+    jvmOptions.setAllJvmArgs(mergedJvmArgs);
+    return jvmOptions.getAllJvmArgs();
+  }
+
+  @ApiStatus.Experimental
+  static List<String> mergeJvmArgs(List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
+    MultiMap<String, String> argumentsMap = MultiMap.createLinkedSet();
+    String lastKey = null;
     for (String jvmArg : ContainerUtil.concat(jvmArgs, jvmArgsFromIdeSettings)) {
-      int i = jvmArg.indexOf('=');
-      if (i <= 0) {
-        mergedArgs.put(jvmArg, "");
+      if (jvmArg.startsWith("-")) {
+        argumentsMap.putValue(jvmArg, "");
+        lastKey = jvmArg;
       }
       else {
-        mergedArgs.put(jvmArg.substring(0, i), jvmArg.substring(i));
+        if (lastKey != null) {
+          argumentsMap.putValue(lastKey, jvmArg);
+          lastKey = null;
+        }
+        else {
+          argumentsMap.putValue(jvmArg, "");
+        }
       }
     }
 
-    List<String> mergedList = new ArrayList<>();
-    for (Map.Entry<String, String> entry : mergedArgs.entrySet()) {
-      mergedList.add(entry.getKey() + entry.getValue());
+    Map<String, String> mergedKeys = new LinkedHashMap<>();
+    Set<String> argKeySet = new LinkedHashSet<>(argumentsMap.keySet());
+    for (String argKey : argKeySet) {
+      Collection<String> values = argumentsMap.getModifiable(argKey);
+      if (values.size() == 1 && values.iterator().next().isEmpty()) {
+        Couple<String> couple = splitArg(argKey);
+        mergedKeys.put(couple.first, couple.second);
+      }
+      else {
+        mergedKeys.put(argKey, "");
+        Map<String, String> mergedArgs = new LinkedHashMap<>();
+        for (String jvmArg : values) {
+          if (jvmArg.isEmpty()) continue;
+          Couple<String> couple = splitArg(jvmArg);
+          mergedArgs.put(couple.first, couple.second);
+        }
+        values.clear();
+        mergedArgs.forEach((key, value) -> values.add(key + value));
+      }
     }
-    JvmOptions jvmOptions = new JvmOptions(null);
-    jvmOptions.setAllJvmArgs(mergedList);
-    return jvmOptions.getAllJvmArgs();
+
+    List<String> mergedArgs = new SmartList<>();
+    mergedKeys.forEach((s1, s2) -> mergedArgs.add(s1 + s2));
+    argKeySet.stream().filter(argKey -> !mergedArgs.contains(argKey)).forEach(argumentsMap::remove);
+
+    // remove `--add-opens` options, because same options will be added by gradle producing the option duplicates.
+    // And the daemon will become uncompilable with the CLI invocations.
+    // see https://github.com/gradle/gradle/blob/v5.1.1/subprojects/launcher/src/main/java/org/gradle/launcher/daemon/configuration/DaemonParameters.java#L125
+    argumentsMap.remove("--add-opens");
+
+    List<String> result = new SmartList<>();
+    argumentsMap.keySet().forEach(key -> argumentsMap.get(key).forEach(val -> {
+      result.add(key);
+      if (StringUtil.isNotEmpty(val)) {
+        result.add(val);
+      }
+    }));
+    return result;
+  }
+
+  private static Couple<String> splitArg(String arg) {
+    int i = arg.indexOf('=');
+    return i <= 0 ? Couple.of(arg, "") : Couple.of(arg.substring(0, i), arg.substring(i));
   }
 
   /**
    * Allows to retrieve gradle api connection to use for the given project.
    *
+   * @param connector   Gradle TAPI connector
    * @param projectPath target project path
    * @param settings    execution settings to use
    * @return connection to use
    * @throws IllegalStateException if it's not possible to create the connection
    */
   @NotNull
-  private static ProjectConnection getConnection(@NotNull String projectPath,
+  private static ProjectConnection getConnection(@NotNull GradleConnector connector,
+                                                 @NotNull String projectPath,
                                                  @Nullable GradleExecutionSettings settings)
     throws IllegalStateException {
     File projectDir = new File(projectPath);
-    GradleConnector connector = GradleConnector.newConnector();
     int ttl = -1;
 
     if (settings != null) {
@@ -356,7 +481,7 @@ public class GradleExecutionHelper {
           break;
         case WRAPPED:
           if (settings.getWrapperPropertyFile() != null) {
-            DistributionFactoryExt.setWrappedDistribution(connector, settings.getWrapperPropertyFile(), serviceDirectory);
+            DistributionFactoryExt.setWrappedDistribution(connector, settings.getWrapperPropertyFile(), serviceDirectory, projectDir);
           }
           break;
       }
@@ -391,7 +516,7 @@ public class GradleExecutionHelper {
   }
 
   @Nullable
-  public static File generateInitScript(boolean isBuildSrcProject, @NotNull Set<Class> toolingExtensionClasses) {
+  public static File generateInitScript(boolean isBuildSrcProject, @NotNull Set<Class<?>> toolingExtensionClasses) {
     InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/init.gradle");
     try {
       if (stream == null) {
@@ -406,7 +531,7 @@ public class GradleExecutionHelper {
         script += buildSrcDefaultInitScript;
       }
 
-      return writeToFileGradleInitScript(script);
+      return writeToFileGradleInitScript(script, "ijinit");
     }
     catch (Exception e) {
       LOG.warn("Can't generate IJ gradle init script", e);
@@ -417,19 +542,24 @@ public class GradleExecutionHelper {
     }
   }
 
-  public static File writeToFileGradleInitScript(@NotNull String content) throws IOException {
-    return writeToFileGradleInitScript(content, "ijinit");
-  }
-
   public static File writeToFileGradleInitScript(@NotNull String content, @NotNull String filePrefix) throws IOException {
-    File tempFile = new File(FileUtil.getTempDirectory(), filePrefix + '.' + GradleConstants.EXTENSION);
-    if (tempFile.exists() && StringUtil.equals(content, FileUtil.loadFile(tempFile))) {
-      return tempFile;
-    }
-    tempFile = FileUtil.findSequentNonexistentFile(tempFile.getParentFile(), filePrefix, GradleConstants.EXTENSION);
-    FileUtil.writeToFile(tempFile, content);
-    tempFile.deleteOnExit();
-    return tempFile;
+    byte[] contentBytes = content.getBytes(StandardCharsets.UTF_8);
+    int contentLength = contentBytes.length;
+    return FileUtil.findSequentFile(new File(FileUtil.getTempDirectory()), filePrefix, GradleConstants.EXTENSION, file -> {
+      try {
+        if (!file.exists()) {
+          FileUtil.writeToFile(file, contentBytes, false);
+          file.deleteOnExit();
+          return true;
+        }
+        if (contentLength != file.length()) return false;
+        return content.equals(FileUtil.loadFile(file, StandardCharsets.UTF_8));
+      }
+      catch (IOException ignore) {
+        // Skip file with access issues. Will attempt to check the next file
+      }
+      return false;
+    });
   }
 
   @Nullable
@@ -448,14 +578,6 @@ public class GradleExecutionHelper {
     }
   }
 
-  @Deprecated // use the method with the cancellationTokenSource provided
-  @Nullable
-  public static GradleVersion getGradleVersion(@NotNull ProjectConnection connection,
-                                               @NotNull ExternalSystemTaskId taskId,
-                                               @NotNull ExternalSystemTaskNotificationListener listener) {
-    return getGradleVersion(connection, taskId, listener, null);
-  }
-
   @Nullable
   public static GradleVersion getGradleVersion(@NotNull ProjectConnection connection,
                                                @NotNull ExternalSystemTaskId taskId,
@@ -470,47 +592,45 @@ public class GradleExecutionHelper {
     return gradleVersion;
   }
 
-  @Deprecated // use the method with the cancellationTokenSource provided
-  @Nullable
-  public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
-                                                     @NotNull ExternalSystemTaskId taskId,
-                                                     @NotNull ExternalSystemTaskNotificationListener listener) {
-    return getBuildEnvironment(connection, taskId, listener, null);
-  }
-
   @Nullable
   public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
                                                      @NotNull ExternalSystemTaskId taskId,
                                                      @NotNull ExternalSystemTaskNotificationListener listener,
                                                      @Nullable CancellationTokenSource cancellationTokenSource) {
-    ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
-    if (cancellationTokenSource != null) {
-      modelBuilder.withCancellationToken(cancellationTokenSource.token());
-    }
-    // do not use connection.getModel methods since it doesn't allow to handle progress events
-    // and we can miss gradle tooling client side events like distribution download.
-    GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
-    modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
-    modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
-    modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
-    modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
+    BuildEnvironment buildEnvironment = null;
+    try {
+      ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
+      if (cancellationTokenSource != null) {
+        modelBuilder.withCancellationToken(cancellationTokenSource.token());
+      }
+      // do not use connection.getModel methods since it doesn't allow to handle progress events
+      // and we can miss gradle tooling client side events like distribution download.
+      GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
+      modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
+      modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+      modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
+      modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
 
-    final BuildEnvironment buildEnvironment = modelBuilder.get();
-    if (LOG.isDebugEnabled()) {
-      try {
-        LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
-        LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
-        LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
+      buildEnvironment = modelBuilder.get();
+      if (LOG.isDebugEnabled()) {
+        try {
+          LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
+          LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
+          LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
+        }
+        catch (Throwable t) {
+          LOG.debug(t);
+        }
       }
-      catch (Throwable t) {
-        LOG.debug(t);
-      }
+    }
+    catch (Throwable t) {
+      LOG.debug(t);
     }
     return buildEnvironment;
   }
 
   private static void replaceTestCommandOptionWithInitScript(@NotNull List<String> args) {
-    Set<String> testIncludePatterns = ContainerUtil.newLinkedHashSet();
+    Set<String> testIncludePatterns = new LinkedHashSet<>();
     Iterator<String> it = args.iterator();
     while (it.hasNext()) {
       final String next = it.next();
@@ -527,7 +647,8 @@ public class GradleExecutionHelper {
       buf.append('[');
       for (Iterator<String> iterator = testIncludePatterns.iterator(); iterator.hasNext(); ) {
         String pattern = iterator.next();
-        buf.append('\'').append(pattern).append('\'');
+        String groovyPattern = toGroovyString(pattern);
+        buf.append('\'').append(groovyPattern).append('\'');
         if (iterator.hasNext()) {
           buf.append(',');
         }
@@ -539,6 +660,26 @@ public class GradleExecutionHelper {
         ContainerUtil.addAll(args, GradleConstants.INIT_SCRIPT_CMD_OPTION, path);
       }
     }
+  }
+
+  @NotNull
+  public static String toGroovyString(@NotNull String string) {
+    StringBuilder stringBuilder = new StringBuilder();
+    for (char ch : string.toCharArray()) {
+      if (ch == '\\') {
+        stringBuilder.append("\\\\");
+      }
+      else if (ch == '\'') {
+        stringBuilder.append("\\'");
+      }
+      else if (ch == '"') {
+        stringBuilder.append("\\\"");
+      }
+      else {
+        stringBuilder.append(ch);
+      }
+    }
+    return stringBuilder.toString();
   }
 
   @Nullable
@@ -563,11 +704,11 @@ public class GradleExecutionHelper {
   }
 
   @NotNull
-  private static String getToolingExtensionsJarPaths(@NotNull Set<Class> toolingExtensionClasses) {
+  public static String getToolingExtensionsJarPaths(@NotNull Set<Class<?>> toolingExtensionClasses) {
     final Set<String> jarPaths = ContainerUtil.map2SetNotNull(toolingExtensionClasses, aClass -> {
       String path = PathManager.getJarPathForClass(aClass);
       if (path != null) {
-        if (FileUtil.getNameWithoutExtension(path).equals("gradle-api-" + GradleVersion.current().getBaseVersion())) {
+        if (FileUtilRt.getNameWithoutExtension(path).equals("gradle-api-" + GradleVersion.current().getBaseVersion())) {
           LOG.warn("The gradle api jar shouldn't be added to the gradle daemon classpath: {" + aClass + "," + path + "}");
           return null;
         }
@@ -590,39 +731,6 @@ public class GradleExecutionHelper {
 
   /* deprecated methods to be removed in future version */
 
-  /**
-   * @deprecated {@link #getModelBuilder(Class, ExternalSystemTaskId, GradleExecutionSettings, ProjectConnection, ExternalSystemTaskNotificationListener)}
-   */
-  @Deprecated
-  @NotNull
-  public <T> ModelBuilder<T> getModelBuilder(@NotNull Class<T> modelType,
-                                             @NotNull final ExternalSystemTaskId id,
-                                             @Nullable GradleExecutionSettings settings,
-                                             @NotNull ProjectConnection connection,
-                                             @NotNull ExternalSystemTaskNotificationListener listener,
-                                             @NotNull List<String> extraJvmArgs) {
-    ModelBuilder<T> result = connection.model(modelType);
-    prepare(result, id, settings, listener, extraJvmArgs, ContainerUtil.newArrayList(), connection);
-    return result;
-  }
-
-
-  /**
-   * @deprecated {@link #getBuildLauncher(ExternalSystemTaskId, ProjectConnection, GradleExecutionSettings, ExternalSystemTaskNotificationListener)}
-   */
-  @Deprecated
-  @NotNull
-  public BuildLauncher getBuildLauncher(@NotNull final ExternalSystemTaskId id,
-                                        @NotNull ProjectConnection connection,
-                                        @Nullable GradleExecutionSettings settings,
-                                        @NotNull ExternalSystemTaskNotificationListener listener,
-                                        @NotNull final List<String> vmOptions,
-                                        @NotNull final List<String> commandLineArgs) {
-    BuildLauncher result = connection.newBuild();
-    prepare(result, id, settings, listener, vmOptions, commandLineArgs, connection);
-    return result;
-  }
-
   @NotNull
   static List<String> obfuscatePasswordParameters(@NotNull List<String> commandLineArguments) {
     List<String> replaced = new ArrayList<>(commandLineArguments.size());
@@ -642,51 +750,86 @@ public class GradleExecutionHelper {
     return replaced;
   }
 
-  /**
-   * @deprecated to be removed in future version
-   */
-  @Deprecated
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @Nullable GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull List<String> extraJvmArgs,
-                             @NotNull ProjectConnection connection) {
-    if (settings == null) return;
-    settings.withVmOptions(extraJvmArgs);
-    prepare(operation, id, settings, listener, connection, new OutputWrapper(listener, id, true), new OutputWrapper(listener, id, false));
+  private static String getIdeaVersion() {
+    ApplicationInfoEx appInfo = ApplicationInfoImpl.getShadowInstance();
+    return appInfo.getMajorVersion() + "." + appInfo.getMinorVersion();
+  }
+
+  private static final Set<String> REPORTED_JAVA11_ISSUE = ContainerUtil.newConcurrentSet();
+
+  // workaround for https://github.com/gradle/gradle/issues/8431
+  // TODO should be removed when the issue will be fixed at the Gradle tooling api side
+  private static void workaroundJavaVersionIssueIfNeeded(@NotNull ProjectConnection connection,
+                                                         @Nullable ExternalSystemTaskId taskId,
+                                                         @Nullable ExternalSystemTaskNotificationListener listener,
+                                                         @Nullable CancellationTokenSource cancellationTokenSource) {
+    String buildRoot = null;
+    if (Registry.is("gradle.java11.issue.workaround", true) &&
+        taskId != null &&
+        listener != null &&
+        JavaVersion.current().feature > 8) {
+      try {
+        BuildEnvironment environment = getBuildEnvironment(connection, taskId, listener, cancellationTokenSource);
+        if (environment != null) {
+          try {
+            buildRoot = environment.getBuildIdentifier().getRootDir().getPath();
+          }
+          catch (Exception ignore) {
+          }
+        }
+        String gradleVersion = environment != null ? environment.getGradle().getGradleVersion() : null;
+        if (gradleVersion == null || GradleVersion.version(gradleVersion).getBaseVersion().compareTo(GradleVersion.version("4.7")) < 0) {
+          Object conn = ReflectionUtil.getField(connection.getClass(), connection, null, "connection");
+          Object actionExecutor = ReflectionUtil.getField(Objects.requireNonNull(conn).getClass(), conn, null, "actionExecutor");
+          Object actionExecutorDelegate =
+            ReflectionUtil.getField(Objects.requireNonNull(actionExecutor).getClass(), actionExecutor, null, "delegate");
+          Object delegateActionExecutor = ReflectionUtil
+            .getField(Objects.requireNonNull(actionExecutorDelegate).getClass(), actionExecutorDelegate, null, "actionExecutor");
+          Object delegateActionExecutorDelegate =
+            ReflectionUtil.getField(Objects.requireNonNull(delegateActionExecutor).getClass(), delegateActionExecutor, null, "delegate");
+          Field distributionField =
+            ReflectionUtil.getDeclaredField(Objects.requireNonNull(delegateActionExecutorDelegate).getClass(), "distribution");
+          Objects.requireNonNull(distributionField).set(delegateActionExecutorDelegate, new DistributionWrapper(
+            (Distribution)distributionField.get(delegateActionExecutorDelegate)));
+        }
+      }
+      catch (Throwable t) {
+        String buildId = taskId.getIdeProjectId() + StringUtil.notNullize(buildRoot);
+        if (REPORTED_JAVA11_ISSUE.add(buildId)) {
+          LOG.error(t);
+        }
+        else {
+          LOG.debug(t);
+        }
+      }
+    }
   }
 
   /**
-   * @deprecated use {@link #prepare(LongRunningOperation, ExternalSystemTaskId, GradleExecutionSettings, ExternalSystemTaskNotificationListener, ProjectConnection)}
+   * workaround for https://github.com/gradle/gradle/issues/8431
+   * TODO should be removed when the issue will be fixed at the Gradle tooling api side
    */
-  @Deprecated
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @Nullable GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull List<String> extraJvmArgs,
-                             @NotNull List<String> commandLineArgs,
-                             @NotNull ProjectConnection connection) {
-    if (settings == null) return;
-    settings.withArguments(commandLineArgs).withVmOptions(extraJvmArgs);
-    prepare(operation, id, settings, listener, connection, new OutputWrapper(listener, id, true), new OutputWrapper(listener, id, false));
-  }
+  static private class DistributionWrapper implements Distribution {
+    private final Distribution myDistribution;
+    private final File myRtJarFile;
 
-  /**
-   * @deprecated use {@link #prepare(LongRunningOperation, ExternalSystemTaskId, GradleExecutionSettings, ExternalSystemTaskNotificationListener, ProjectConnection, OutputStream, OutputStream)}
-   */
-  @Deprecated
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @NotNull GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull List<String> extraJvmArgs,
-                             @NotNull List<String> commandLineArgs,
-                             @NotNull ProjectConnection connection,
-                             @NotNull final OutputStream standardOutput,
-                             @NotNull final OutputStream standardError) {
-    settings.withArguments(commandLineArgs).withVmOptions(extraJvmArgs);
-    prepare(operation, id, settings, listener, connection, standardOutput, standardError);
+    private DistributionWrapper(Distribution distribution) {
+      myDistribution = distribution;
+      myRtJarFile = new File(Objects.requireNonNull(PathUtil.getCanonicalPath(PathManager.getJarPathForClass(MarkerRt.class))));
+    }
+
+    @Override
+    public String getDisplayName() {
+      return myDistribution.getDisplayName();
+    }
+
+    @Override
+    public ClassPath getToolingImplementationClasspath(ProgressLoggerFactory factory,
+                                                       InternalBuildProgressListener listener,
+                                                       File file,
+                                                       BuildCancellationToken token) {
+      ClassPath classpath = myDistribution.getToolingImplementationClasspath(factory, listener, file, token);
+      return DefaultClassPath.of(myRtJarFile).plus(classpath);
+    }
   }
 }
