@@ -1,4 +1,4 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.idea.maven.importing;
 
 import com.intellij.openapi.command.WriteCommandAction;
@@ -22,6 +22,7 @@ import com.intellij.util.xml.DomUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.concurrency.Promise;
+import org.jetbrains.idea.maven.dom.MavenDomBundle;
 import org.jetbrains.idea.maven.dom.MavenDomUtil;
 import org.jetbrains.idea.maven.dom.converters.MavenDependencyCompletionUtil;
 import org.jetbrains.idea.maven.dom.model.MavenDomDependency;
@@ -38,18 +39,15 @@ import org.jetbrains.jps.model.java.JpsJavaSdkType;
 
 import java.util.*;
 
-/**
- * @author nik
- */
-public class MavenProjectModelModifier extends JavaProjectModelModifier {
+public final class MavenProjectModelModifier extends JavaProjectModelModifier {
   private final Project myProject;
   private final MavenProjectsManager myProjectsManager;
   private final MavenProjectIndicesManager myIndicesManager;
 
-  public MavenProjectModelModifier(Project project, MavenProjectsManager projectsManager, MavenProjectIndicesManager manager) {
+  public MavenProjectModelModifier(Project project) {
     myProject = project;
-    myProjectsManager = projectsManager;
-    myIndicesManager = manager;
+    myProjectsManager = MavenProjectsManager.getInstance(project);
+    myIndicesManager = MavenProjectIndicesManager.getInstance(project);
   }
 
   @Nullable
@@ -107,7 +105,8 @@ public class MavenProjectModelModifier extends JavaProjectModelModifier {
       projectToUpdate.add(fromProject);
     }
 
-    WriteCommandAction.writeCommandAction(myProject, PsiUtilCore.toPsiFileArray(files)).withName("Add Maven Dependency").run(() -> {
+    WriteCommandAction.writeCommandAction(myProject, PsiUtilCore.toPsiFileArray(files)).withName(MavenDomBundle.message("fix.add.dependency")).run(() -> {
+                                                                                                 PsiDocumentManager pdm = PsiDocumentManager.getInstance(myProject);
       for (Trinity<MavenDomProjectModel, MavenId, String> trinity : models) {
         final MavenDomProjectModel model = trinity.first;
         MavenDomDependency dependency = MavenDomUtil.createDomDependency(model, null, trinity.second);
@@ -115,8 +114,9 @@ public class MavenProjectModelModifier extends JavaProjectModelModifier {
         if (ms != null) {
           dependency.getScope().setStringValue(ms);
         }
-        Document document = PsiDocumentManager.getInstance(myProject).getDocument(DomUtil.getFile(model));
+        Document document = pdm.getDocument(DomUtil.getFile(model));
         if (document != null) {
+          pdm.doPostponedOperationsAndUnblockDocument(document);
           FileDocumentManager.getInstance().saveDocument(document);
         }
       }
@@ -155,7 +155,10 @@ public class MavenProjectModelModifier extends JavaProjectModelModifier {
         suitableVersions.add(version);
       }
     }
-    return suitableVersions.isEmpty() ? "RELEASE" : Collections.max(suitableVersions, VersionComparatorUtil.COMPARATOR);
+    if (suitableVersions.isEmpty()) {
+      return mavenId.getVersion() == null ? "RELEASE" : mavenId.getVersion();
+    }
+    return Collections.max(suitableVersions, VersionComparatorUtil.COMPARATOR);
   }
 
   @Nullable
@@ -180,11 +183,14 @@ public class MavenProjectModelModifier extends JavaProjectModelModifier {
     final MavenDomProjectModel model = MavenDomUtil.getMavenDomProjectModel(myProject, mavenProject.getFile());
     if (model == null) return null;
 
-    WriteCommandAction.writeCommandAction(myProject, DomUtil.getFile(model)).withName("Add Maven Dependency").run(() -> {
+    WriteCommandAction.writeCommandAction(myProject, DomUtil.getFile(model)).withName(MavenDomBundle.message("fix.add.dependency")).run(() -> {
       XmlTag tag = getCompilerPlugin(model).getConfiguration().ensureTagExists();
       String option = JpsJavaSdkType.complianceOption(level.toJavaVersion());
       setChildTagValue(tag, "source", option);
       setChildTagValue(tag, "target", option);
+      if (level.isPreview()) {
+        setChildTagValue(tag, "compilerArgs","--enable-preview");
+      }
       Document document = PsiDocumentManager.getInstance(myProject).getDocument(DomUtil.getFile(model));
       if (document != null) {
         FileDocumentManager.getInstance().saveDocument(document);
