@@ -847,6 +847,42 @@ public class StructureImportingTest extends MavenImportingTestCase {
     assertEquals(LanguageLevel.JDK_1_3, getLanguageLevelForModule());
   }
 
+  public void testPreviewLanguageLevelOneLine() {
+    doTestPreview("<compilerArgs>--enable-preview</compilerArgs>\n");
+  }
+
+  public void testPreviewLanguageLevelArg() {
+    doTestPreview("<compilerArgs><arg>--enable-preview</arg></compilerArgs>\n");
+  }
+
+  public void testPreviewLanguageLevelCompilerArg() {
+    doTestPreview("<compilerArgs><compilerArg>--enable-preview</compilerArg></compilerArgs>\n");
+  }
+
+  private void doTestPreview(String compilerArgs) {
+    importProject("<groupId>test</groupId>" +
+                  "<artifactId>project</artifactId>" +
+                  "<version>1</version>" +
+
+                  "<build>" +
+                  "  <plugins>" +
+                  "    <plugin>\n" +
+                  "      <groupId>org.apache.maven.plugins</groupId>\n" +
+                  "      <artifactId>maven-compiler-plugin</artifactId>\n" +
+                  "      <version>3.8.0</version>\n" +
+                  "      <configuration>\n" +
+                  "          <release>13</release>\n" +
+                             compilerArgs +
+                  "          <forceJavacCompilerUse>true</forceJavacCompilerUse>\n" +
+                  "      </configuration>\n" +
+                  "    </plugin>" +
+                  "  </plugins>" +
+                  "</build>");
+
+    assertModules("project");
+    assertEquals(LanguageLevel.JDK_13_PREVIEW, getLanguageLevelForModule());
+  }
+
   public void testInheritingLanguageLevelFromPluginManagementSection() {
     importProject("<groupId>test</groupId>" +
                   "<artifactId>project</artifactId>" +
